--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-image-lightbox": "^5.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "superagent": "^5.1.0"
