--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "history": "^4.10.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "popper": "^1.0.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-image-lightbox": "^5.1.0",
+    "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "superagent": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
